--- a/config/config.json
+++ b/config/config.json
@@ -1,10 +1,11 @@
 {
-  "JOB_NAMES": ["QA Automation"], 
+  "JOB_NAMES": ["QA Automation"],
   "LOCATIONS": ["remote", "poland-remote"],
   "HEADFUL": true,
   "TARGET_INDEXES": 1000,
   "FAIL_FAST": true,
+  "LIMIT": 10,
   "ALLOW_COOKIE_CLICK": true,
-  "KEYWORDS":["Playwright","Python","JavaScript/TypeScript"],
-  "INTRODUCE_YOURSELF":": "\nGithub: https://github.com/AlexeyYevtushik\nLinkedIn: https://www.linkedin.com/in/alexey-yevtushik/"
+  "KEYWORDS": ["Playwright", "Python", "JavaScript/TypeScript"],
+  "INTRODUCE_YOURSELF": "Github: https://github.com/AlexeyYevtushik\nLinkedIn: https://www.linkedin.com/in/alexey-yevtushik/"
 }
