--- a/config/config.json
+++ b/config/config.json
@@ -11,6 +11,15 @@
   "LIMIT": 2,
   "ALLOW_COOKIE_CLICK": true,
   "ALLOW_SAMEPAGE_OPENER": false,
+  {
+  "PIPELINE": {
+    "SEQ": "s1,s2x2,s3,s4,s6",
+    "SLEEP_SECONDS": 5,
+    "KEEP_GOING": false,
+    "FORCE_S1": false
+    }
+  },
+
   
   "TESTED_LOCATIONS": ["lodz", "gliwice" , "rybnik", "katowice", "gdansk", "madrid", "lisbona", "wroclaw","remote", "kyiv", "poland-remote", "riga", "vilnius", "kaunas", "budapest", "sofia", "belgrad", "bucharest", "szczecin", "zielona-gora", "poznan"]
 }
